--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="<%= process.env.VUE_APP_I18N_DEFAULT_LOCALE %>">
   <head>
     <meta charset="utf-8" />
     <meta
