--- a/front-end-2/index.html
+++ b/front-end-2/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="">
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
+    <meta
+      name="description"
+      content="Application to visualize smart meter measurements data and provide simple analytics."
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vite App</title>
   </head>
