--- a/front-end-2/index.html
+++ b/front-end-2/index.html
@@ -8,7 +8,7 @@
       content="Application to visualize smart meter measurements data and provide simple analytics."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title></title>
   </head>
   <body>
     <div id="app"></div>
